# video-downloader

./: .gitignore  LICENSE  README.MD  config.py  config.yaml  instagram_reel_downloader.py  main.py  metadata.py  platform_detector.py  pyproject.toml  requirements.txt  test_instagram_downloader.py  test_metadata.py  test_platform_detector.py  test_youtube_downloader.py
downloaders/: base.py  youtube.py
link2video/: __init__.py  config.py  main.py  metadata.py  platform_detector.py
link2video.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
link2video/downloaders/: base.py  instagram.py  youtube.py
scripts/: audio-trim.py
tests/: test_base_downloader.py  test_config.py  test_metadata.py
