[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "link2video"
version = "0.1.0"
description = "Multi-platform video downloader with GUI support for Instagram, YouTube, and LinkedIn"
readme = "README.MD"
requires-python = ">=3.8"

[project.scripts]
link2video = "link2video.main:main"

[tool.setuptools]
packages = ["link2video", "link2video.downloaders"]
